Fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -28,15 +28,6 @@
         --text-primary: 255 255 255;
         --text-secondary: 0 0 0;
     }
-    
-    @media (prefers-color-scheme: dark) {
-        :root {
-            --color-blk: 255 255 255;
-            --color-wht: 0 0 0;
-            --text-primary: 0 0 0;
-            --text-secondary: 255 255 255;
-        }
-    }
 }
 
 .App {
